# pandaset-to-annofab

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  post-start.sh
panda2anno/: convert_cuboid_to_annofab_annotation.py  convert_data_to_kitti.py  convert_semseg_to_annofab_annotation.py  copy_camera_image.py  print_attribute_count.py  print_cuboid_count.py  print_cuboid_label.py  print_datetime.py  print_semseg_count.py
panda2anno/common/: annofab.py  dataset_accessor.py  kitti.py  pose.py  utils.py
pandaset2kitti/: convert_cuboid_to_annofab_annotation.py  convert_semseg_to_annofab_annotation.py  dgp2kitti.py  main.py  print_cuboid_label.py
pandaset2kitti/common/: annofab.py  camera.py  dataset_accessor.py  pose.py  utils.py
resources/: cuboid_label.csv  semseg_label.csv
scripts/: put_cuboid_label.py  put_semseg_label.py  upload_scene.sh
tests/: test_convert_cuboid_to_annofab_annotation.py  test_convert_data_to_kitti.py  test_convert_semseg_to_annofab_annotation.py
tests/common/: test_pose.py
tests/resources/pandaset/001/camera/back_camera/: poses.json  timestamps.json
tests/resources/pandaset/001/camera/front_camera/: poses.json  timestamps.json
tests/resources/pandaset/001/lidar/: poses.json  timestamps.json
