[tool.poetry]
name = "pandaset-to-kitti"
version = "0.1.0"
description = "PandaSetをKITTIに変換します。"
authors = ["yuji38kwmt"]
packages = [
    { include = "panda2kitti" }
]

[tool.poetry.dependencies]
python = "^3.9"



[tool.poetry.dev-dependencies]
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"

isort = "*"
mypy = "*"
pylint = "*"
autoflake = "*"
flake8 = "*"
black = "*"

ipython = "*"


# type sutb
types-requests = "*"
types-PyYAML = "*"
slack-sdk = "^3"

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true

check_untyped_defs = true


[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


