[tool.poetry]
name = "pandaset-to-kitti"
version = "0.1.0"
description = "PandaSetをAnnofabに登録するためのスクリプトです。"
authors = ["yuji38kwmt"]
packages = [
    { include = "panda2anno" }
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
pandas = "*"
pandaset = { path = "pandaset-devkit/python", develop = false }

requests = "*"
pyquaternion = "^0.9.9"
dataclasses-json = "^0.5.7"
more-itertools = "^8.12.0"
annofabapi-3dpc-extensions = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"

isort = "*"
mypy = "*"
pylint = "*"
autoflake = "*"
flake8 = "*"
black = "*"

ipython = "*"


# type sutb
types-requests = "*"
types-PyYAML = "*"


[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true

check_untyped_defs = true


[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


