[tool.poetry]
package-mode = false
packages = [
    { include = "panda2anno" }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
pandas = "*"
pandaset = { path = "pandaset-devkit/python", develop = false }

requests = "*"
pyquaternion = "*"
dataclasses-json = "*"
more-itertools = "*"
annofabapi-3dpc-extensions = "^0.2"
annofab-3dpc-editor-cli = "^0.3"
annofabcli = "*"


[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.formatter.dependencies]
isort = "*"
autoflake = "*"
black = "*"


[tool.poetry.group.linter.dependencies]
flake8 = "*"
mypy = "*"
pylint = "*"

# type sutb
types-requests = "*"
types-PyYAML = "*"


[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true

check_untyped_defs = true


[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

